fix: adjust image size in person card for better layout and update margin in services category for improved spacing

--- a/src/styles/components/person_card.scss
+++ b/src/styles/components/person_card.scss
@@ -64,9 +64,9 @@
     }
 
     @media (max-width: 1199px) {
-      width: 80px;
-      height: 80px;
-      min-width: 80px;
+      width: 70px;
+      height: 70px;
+      min-width: 70px;
     }
   }
 
